Fixed custom cursor not showing on buttons

--- a/executor/style.css
+++ b/executor/style.css
@@ -9,7 +9,7 @@ body {
   -webkit-transition: height .5s;
   transition: height .5s;
 }
-body, html, div, a, p, h1,h2,h3,h4,h5,h6, iframe {
+body, html, div, a, p, h1,h2,h3,h4,h5,h6, iframe, button {
 	cursor: auto;
 	cursor:url(../src/cursor.png) 25 15, auto !important;
 	cursor:url(../src/cursor.png) 25 15, pointer !important;
